--- a/index.html
+++ b/index.html
@@ -3,11 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Bulma CSS link-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+
+    <!--Personal CSS link-->
     <link rel="stylesheet" href="./assets/style.css">
+
+    <!--AJAX jquery script link-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <title>Yoda Me Astrology</title>
 </head>
 <body>
-    
+    <button class="sign-button" id="aquarius">aquarius</button>
+    <button class="sign-button" id="pisces">pisces</button>
+    <button class="sign-button" id="aries">aries</button>
+    <button class="sign-button" id="taurus">taurus</button>
+    <button class="sign-button" id="gemini">gemini</button>
+    <button class="sign-button" id="cancer">cancer</button>
+    <button class="sign-button" id="leo">leo</button>
+    <button class="sign-button" id="virgo">virgo</button>
+    <button class="sign-button" id="libra">libra</button>
+    <button class="sign-button" id="scorpio">scorpio</button>
+    <button class="sign-button" id="sagittarius">sagittarius</button>
+    <button class="sign-button" id="capricorn">capricorn</button>
+    <p id="words"></p>
+
+    <!--personal javascript link-->
+    <script src="./assets/app.js"></script>
 </body>
-<script src="./assets/app.js"></script>
 </html>
