test merge: UPDATE: function to a submit from click: not working yet

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
     <title>Yoda Me Astrology</title>
 </head>
 <body>
-    <button class="sign-button" id="aquarius">aquarius</button>
-    <button class="sign-button" id="pisces">pisces</button>
-    <button class="sign-button" id="aries">aries</button>
-    <button class="sign-button" id="taurus">taurus</button>
-    <button class="sign-button" id="gemini">gemini</button>
-    <button class="sign-button" id="cancer">cancer</button>
-    <button class="sign-button" id="leo">leo</button>
-    <button class="sign-button" id="virgo">virgo</button>
-    <button class="sign-button" id="libra">libra</button>
-    <button class="sign-button" id="scorpio">scorpio</button>
-    <button class="sign-button" id="sagittarius">sagittarius</button>
-    <button class="sign-button" id="capricorn">capricorn</button>
+    <form>
+        <input class="sign-input" id="aquarius">aquarius</input>
+        <input class="sign-input" id="pisces">pisces</input>
+        <input class="sign-input" id="aries">aries</input>
+        <input class="sign-input" id="taurus">taurus</input>
+        <input class="sign-input" id="gemini">gemini</input>
+        <input class="sign-input" id="cancer">cancer</input>
+        <input class="sign-input" id="leo">leo</input>
+        <input class="sign-input" id="virgo">virgo</input>
+        <input class="sign-input" id="libra">libra</input>
+        <input class="sign-input" id="scorpio">scorpio</input>
+        <input class="sign-input" id="sagittarius">sagittarius</input>
+        <input class="sign-input" id="capricorn">capricorn</input>
+    </form>
     <p id="words"></p>
 
     <!--personal javascript link-->
