changed the function for click, added forms for each input button || as of now the code will work, not ideal coding though

--- a/index.html
+++ b/index.html
@@ -17,18 +17,40 @@
 </head>
 <body>
     <form>
-        <input class="sign-input" id="aquarius">aquarius</input>
-        <input class="sign-input" id="pisces">pisces</input>
-        <input class="sign-input" id="aries">aries</input>
-        <input class="sign-input" id="taurus">taurus</input>
-        <input class="sign-input" id="gemini">gemini</input>
-        <input class="sign-input" id="cancer">cancer</input>
-        <input class="sign-input" id="leo">leo</input>
-        <input class="sign-input" id="virgo">virgo</input>
-        <input class="sign-input" id="libra">libra</input>
-        <input class="sign-input" id="scorpio">scorpio</input>
-        <input class="sign-input" id="sagittarius">sagittarius</input>
-        <input class="sign-input" id="capricorn">capricorn</input>
+        <input class="sign-input" type="submit" value="aquarius" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="pisces" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="aries" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="taurus" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="gemini" />
+    </form>   
+    <form>
+        <input class="sign-input" type="submit" value="cancer" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="leo" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="virgo" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="libra" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="scorpio" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="sagittarius" />
+    </form>
+    <form>
+        <input class="sign-input" type="submit" value="capricorn" />
     </form>
     <p id="words"></p>
 
@@ -36,3 +58,12 @@
     <script src="./assets/app.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
