fix nav and container

--- a/index.html
+++ b/index.html
@@ -16,13 +16,33 @@
     <title>Yoda Me Astrology</title>
 </head>
 <body>
+
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <nav class="navbar-brand">
           <a class="navbar-item" href="#">
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="Bulma: Free, open source, and modern CSS framework based on Flexbox" width="100" height="100">
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="100" height="100">
           </a>
-          <p>Yoda-Me</p>
-        </nav>
+          <p>Yoda Me Astrology</p>
+    </nav>
+    </nav>
+
+    <section class="hero is-info is-large">
+      <div class="hero-body">
+        <div class="container">
+          <img src="./icons/nightsky.jpg" alt="">
+          <h1 class="title">
+            Large title
+          </h1>
+          <h2 class="subtitle">
+            Large subtitle
+          </h2>
+        </div>
+      </div>
+    </section>
+
+<div class="container">
+  <div class="row">
+    <div class="col-3">
     <form>
         <input class="sign-input" type="submit" value="aquarius" />
     </form>
@@ -35,6 +55,9 @@
     <form>
         <input class="sign-input" type="submit" value="taurus" />
     </form>
+  </div>
+  </div>
+    <div class="row">
     <form>
         <input class="sign-input" type="submit" value="gemini" />
     </form>   
@@ -47,6 +70,8 @@
     <form>
         <input class="sign-input" type="submit" value="virgo" />
     </form>
+  </div>
+  <div class="row">
     <form>
         <input class="sign-input" type="submit" value="libra" />
     </form>
@@ -59,6 +84,9 @@
     <form>
         <input class="sign-input" type="submit" value="capricorn" />
     </form>
+  </div>
+</div>
+
     <p id="words"></p>
 
     <!--personal javascript link-->
