update full width banner

--- a/index.html
+++ b/index.html
@@ -20,22 +20,17 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <nav class="navbar-brand">
           <a class="navbar-item" href="#">
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="100" height="100">
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="100" height="110">Yoda Me Astrology
           </a>
-          <p>Yoda Me Astrology</p>
     </nav>
     </nav>
 
-    <section class="hero is-info is-large">
+    <section class="hero is-fullheight-with-navbar">
       <div class="hero-body">
         <div class="container">
-          <img src="./icons/nightsky.jpg" alt="">
-          <h1 class="title">
-            Large title
-          </h1>
-          <h2 class="subtitle">
-            Large subtitle
-          </h2>
+          <p class="title">
+            Fullheight hero with navbar
+          </p>
         </div>
       </div>
     </section>
