--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <body>
 
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <nav class="navbar-brand">
-          <a class="navbar-item" href="#">
-            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="100" height="110">Yoda Me Astrology
+          <a class="navbar-item">
+            <img class="yoda-icon" src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="100px" height="150px" >Yoda Me Astrology
           </a>
     </nav>
     </nav>
@@ -29,60 +28,73 @@
       <div class="hero-body">
         <div class="container">
           <p class="title">
-            Fullheight hero with navbar
+            Choose Your Horoscope Sign
           </p>
-        </div>
-      </div>
+          <div class="columns">
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="aquarius" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="pisces" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="aries" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="taurus" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="gemini" />
+            </form>
+            </div><div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="cancer" />
+            </form>
+            </div>
+          </div>
+          <div class="columns">
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="leo" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="virgo" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="libra" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="scorpio" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="sagittarius" />
+            </form>
+            </div>
+            <div class="column">
+              <form>
+                <input class="sign-input" type="submit" value="capricorn" />
+            </form>
+            </div>
+          </div>
+
     </section>
-
-<div class="container">
-  <div class="row">
-    <div class="col-3">
-    <form>
-        <input class="sign-input" type="submit" value="aquarius" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="pisces" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="aries" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="taurus" />
-    </form>
-  </div>
-  </div>
-    <div class="row">
-    <form>
-        <input class="sign-input" type="submit" value="gemini" />
-    </form>   
-    <form>
-        <input class="sign-input" type="submit" value="cancer" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="leo" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="virgo" />
-    </form>
-  </div>
-  <div class="row">
-    <form>
-        <input class="sign-input" type="submit" value="libra" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="scorpio" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="sagittarius" />
-    </form>
-    <form>
-        <input class="sign-input" type="submit" value="capricorn" />
-    </form>
-  </div>
-</div>
-
-    <p id="words"></p>
 
     <!--personal javascript link-->
     <script src="./assets/app.js"></script>
