Updated Caps on sign names

--- a/index.html
+++ b/index.html
@@ -33,63 +33,63 @@
           <div class="columns">
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="aquarius" />
+                <input class="sign-input" type="submit" value="Aquarius" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="pisces" />
+                <input class="sign-input" type="submit" value="Pisces" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="aries" />
+                <input class="sign-input" type="submit" value="Aries" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="taurus" />
+                <input class="sign-input" type="submit" value="Taurus" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="gemini" />
+                <input class="sign-input" type="submit" value="Gemini" />
             </form>
             </div><div class="column">
               <form>
-                <input class="sign-input" type="submit" value="cancer" />
+                <input class="sign-input" type="submit" value="Cancer" />
             </form>
             </div>
           </div>
           <div class="columns">
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="leo" />
+                <input class="sign-input" type="submit" value="Leo" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="virgo" />
+                <input class="sign-input" type="submit" value="Virgo" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="libra" />
+                <input class="sign-input" type="submit" value="Libra" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="scorpio" />
+                <input class="sign-input" type="submit" value="Scorpio" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="sagittarius" />
+                <input class="sign-input" type="submit" value="Sagittarius" />
             </form>
             </div>
             <div class="column">
               <form>
-                <input class="sign-input" type="submit" value="capricorn" />
+                <input class="sign-input" type="submit" value="Capricorn" />
             </form>
             </div>
           </div>
