add icons into html

--- a/index.html
+++ b/index.html
@@ -33,30 +33,36 @@
           <div class="columns">
             <div class="column">
               <form>
+                <img src="./icons/aquarius 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Aquarius" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/pisces 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Pisces" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/aries 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Aries" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/taurus 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Taurus" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/gemini 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Gemini" />
             </form>
             </div><div class="column">
               <form>
+                <img src="./icons/cancer 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Cancer" />
             </form>
             </div>
@@ -64,31 +70,37 @@
           <div class="columns">
             <div class="column">
               <form>
+                <img src="./icons/leo 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Leo" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/virgo 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Virgo" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/libra 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Libra" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/scorpio 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Scorpio" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/sagittarius 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Sagittarius" />
             </form>
             </div>
             <div class="column">
               <form>
+                <img src="./icons/capricorn 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Capricorn" />
             </form>
             </div>
