commit update navbar and Materialize CSS linkand google font

--- a/index.html
+++ b/index.html
@@ -7,22 +7,32 @@
     <!--Bulma CSS link-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 
-    <!--Personal CSS link-->
-    <link rel="stylesheet" href="./assets/style.css">
+     <!--Materialize CSS link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+
+    <!--Google font-->
+    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 
     <!--AJAX jquery script link-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!--Personal CSS link-->
+    <link rel="stylesheet" href="./assets/style.css">
+
 
     <title>Yoda Me Astrology</title>
 </head>
 <body>
 
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-          <a class="navbar-item">
-            <img class="yoda-icon" src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="100px" height="150px" >Yoda Me Astrology
-          </a>
-    </nav>
-    </nav>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo center"><img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px"></a>
+    </div>
+
+    <div class="nav-content center-align">
+      <span class="nav-title">Yoda-Me-Astrology</span>
+    </div>
+  </nav>
 
     <section class="hero is-fullheight-with-navbar">
       <div class="hero-body">
