update horoscope columns

--- a/index.html
+++ b/index.html
@@ -38,81 +38,83 @@
       <div class="hero-body">
         <div class="container">
           <p class="title">
-            Choose Your Horoscope Sign
+            Choose Your Horoscope Sign:
           </p>
           <div class="columns">
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/aquarius 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Aquarius" />
             </form>
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/pisces 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Pisces" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/aries 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Aries" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/taurus 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Taurus" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/gemini 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Gemini" />
-            </form>
-            </div><div class="column">
-              <form>
+            </form >
+            </div>
+            <div class="column">
+              <form class="border">
                 <img src="./icons/cancer 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Cancer" />
-            </form>
+            </form >
             </div>
           </div>
+
           <div class="columns">
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/leo 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Leo" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/virgo 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Virgo" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/libra 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Libra" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/scorpio 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Scorpio" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border ">
                 <img src="./icons/sagittarius 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Sagittarius" />
-            </form>
+            </form >
             </div>
             <div class="column">
-              <form>
+              <form class="border">
                 <img src="./icons/capricorn 2.png" alt="icons">
                 <input class="sign-input" type="submit" value="Capricorn" />
-            </form>
+            </form >
             </div>
           </div>
 
