--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 
 
     <title>Yoda Me Astrology</title>
+    <!--favicon-->
+    <link rel="shortcut icon" href="https://img.icons8.com/flat_round/64/000000/warranty-card.png"/>
 </head>
 <body>
 
