cleaned up JS moved everything to axios, console.log tidied

--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Bulma CSS link-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+  <!--Bulma CSS link-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
 
-     <!--Materialize CSS link-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!--Materialize CSS link-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <!--Google font-->
-    <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+  <!--Google font-->
+  <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
 
-    <!--AJAX jquery script link-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!--AJAX jquery script link-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-    <!--Personal CSS link-->
-    <link rel="stylesheet" href="./assets/style.css">
+  <!--Personal CSS link-->
+  <link rel="stylesheet" href="./assets/style.css">
 
 
-    <title>Yoda Me Astrology</title>
-    <!--favicon-->
-    <link rel="shortcut icon" href="https://img.icons8.com/flat_round/64/000000/warranty-card.png"/>
+  <title>Yoda Me Astrology</title>
+  <!--favicon-->
+  <link rel="shortcut icon" href="https://img.icons8.com/flat_round/64/000000/warranty-card.png" />
 </head>
+
 <body>
 
   <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo center"><img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons" width="200px" height="200px"></a>
+      <a href="#" class="brand-logo center"><img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px"></a>
     </div>
 
     <div class="nav-content center-align">
@@ -45,7 +48,7 @@
         <div class="columns">
           <div class="column">
             <form class="border">
-              <img src="./icons/aquarius 2.png" alt="icons">
+              <img src="./icons/aquarius 2.png" id="img1" alt="icons">
               <p>Jan 20 - Feb 18</p>
               <input class="sign-input" type="submit" value="Aquarius" />
             </form>
@@ -136,17 +139,9 @@
   </section>
 
 
-
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!--personal javascript link-->
   <script src="./assets/app.js"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
-
