--- a/index.html
+++ b/index.html
@@ -47,13 +47,8 @@
         </p>
         <div class="columns">
           <div class="column">
-<<<<<<< HEAD
-            <form class="border">
-              <img src="./icons/aquarius 2.png" id="img1" alt="icons">
-=======
             <div class="border">
               <img src="./icons/aquarius 2.png" alt="icons">
->>>>>>> 581b9fae9e849fab206c75eb3ccebf0d6cfe8775
               <p>Jan 20 - Feb 18</p>
               <a class="trigger_popup_fricc">Aquarius</a>
               <div class="hover_bkgr_fricc">
@@ -189,6 +184,25 @@
     </div>
   </section>
 
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Yoda Me Astrology</strong> by: Excepetional Handlers
+        <p>
+            <a href="SM">Stephanie McCandless</a>
+        </p>
+        <p>
+            <a href="ND">Nhi Danis</a>
+        </p> 
+        <p>
+            <a href="MH">Max Higga</a>
+        </p>
+        <p>
+            <a href="MB">Michael Burkett</a>
+        </p>
+        
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!--personal javascript link-->
