--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-
+  <!-- heading area -->
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo center"><img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
@@ -38,7 +38,7 @@
       <span class="nav-title">Yoda-Me-Astrology</span>
     </div>
   </nav>
-
+  <!-- horoscope choosing body // sign buttons -->
   <section class="hero is-fullheight-with-navbar">
     <div class="hero-body">
       <div class="container">
@@ -46,34 +46,38 @@
           Choose Your Horoscope Sign:
         </p>
         <div class="columns">
+
           <div class="column">
             <div class="border">
               <img src="./icons/aquarius 2.png" alt="icons">
               <p>Jan 20 - Feb 18</p>
               <a class="trigger_popup_fricc aquaTrig" id="aquarius">Aquarius</a>
-              <div class="hover_bkgr_fricc aquaHover">
-                <span class="helper"></span>
-                <div>
-                  <div class="popupCloseButton">&times;</div>
-                  <h2>Aquarius</h2>
-                  <h4></h4>
-                </div>
-              </div>
             </div>
           </div>
+
+          <div class="hover_bkgr_fricc aquaHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <h2>Aquarius</h2>
+              <h4></h4>
+            </div>
+          </div>
+
           <div class="column">
             <div class="border">
               <img src="./icons/pisces 2.png" alt="icons">
               <p>Feb 19 - Mar 20</p>
               <a class="trigger_popup_fricc piscesTrig" id="pisces">Pisces</a>
-              <div class="hover_bkgr_fricc piscesHover">
-                <span class="helper"></span>
-                <div>
-                  <div class="popupCloseButton">&times;</div>
-                  <h2>Pisces</h2>
-                  <h4></h4>
-                </div>
-              </div>
+            </div>
+          </div>
+
+          <div class="hover_bkgr_fricc piscesHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <h2>Pisces</h2>
+              <h4></h4>
             </div>
           </div>
 
@@ -82,14 +86,15 @@
               <img src="./icons/aries 2.png" alt="icons">
               <p>Mar 21 - Apr 19</p>
               <a class="trigger_popup_fricc ariesTrig" id="aries">Aries </a>
-              <div class="hover_bkgr_fricc ariesHover">
-                <span class="helper"></span>
-                <div>
-                  <div class="popupCloseButton">&times;</div>
-                  <h2>Aries </h2>
-                  <h4></h4>
-                </div>
-              </div>
+            </div>
+          </div>
+
+          <div class="hover_bkgr_fricc ariesHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <h2>Aries </h2>
+              <h4></h4>
             </div>
           </div>
 
@@ -98,14 +103,16 @@
               <img src="./icons/taurus 2.png" alt="icons">
               <p>Apr 20 - May 20</p>
               <a class="trigger_popup_fricc taurusTrig" id="taurus">Taurus </a>
-              <div class="hover_bkgr_fricc taurusHover">
-                <span class="helper"></span>
-                <div>
-                  <div class="popupCloseButton">&times;</div>
-                  <h2>Taurus</h2>
-                  <h4></h4>
-                </div>
-              </div>
+
+            </div>
+          </div>
+
+          <div class="hover_bkgr_fricc taurusHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <h2>Taurus</h2>
+              <h4></h4>
             </div>
           </div>
 
@@ -113,14 +120,16 @@
             <div class="border">
               <img src="./icons/gemini 2.png" alt="icons">
               <p>May 21 - Jun 20</p>
-              <a class="trigger_popup_fricc">Gemini</a>
-              <div class="hover_bkgr_fricc">
-                <span class="helper"></span>
-                <div>
-                  <div class="popupCloseButton">&times;</div>
-                  <h2>Gemini</h2>
-                </div>
-              </div>
+              <a class="trigger_popup_fricc geminiTrig" id="gemini">Gemini</a>
+            </div>
+          </div>
+
+          <div class="hover_bkgr_fricc geminiHover">
+            <span class="helper"></span>
+            <div>
+              <div class="popupCloseButton">&times;</div>
+              <h2>Gemini</h2>
+              <h4></h4>
             </div>
           </div>
 
@@ -128,15 +137,17 @@
             <div class="border">
               <img src="./icons/cancer 2.png" alt="icons">
               <p>Jun 21 - Jul 22</p>
-              <a class="trigger_popup_fricc">Cancer</a>
-              <div class="hover_bkgr_fricc">
-                <span class="helper"></span>
-                <div>
-                  <div class="popupCloseButton">&times;</div>
-                  <h2>Cancer</h2>
-                </div>
-              </div>
+              <a class="trigger_popup_fricc cancerTrig" id="cancer">Cancer</a>
             </div>
+          </div>
+        </div>
+
+        <div class="hover_bkgr_fricc cancerHover">
+          <span class="helper"></span>
+          <div>
+            <div class="popupCloseButton">&times;</div>
+            <h2>Cancer</h2>
+            <h4></h4>
           </div>
         </div>
 
