delete nav-bar & update background-img

--- a/index.html
+++ b/index.html
@@ -28,20 +28,16 @@
 
 <body>
   <!-- heading area -->
-  <nav>
-    <div class="nav-wrapper">
-      <a href="#" class="brand-logo center"><img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
-          width="200px" height="200px"></a>
-    </div>
-
-    <div class="nav-content center-align">
-      <span class="nav-title">Yoda-Me-Astrology</span>
-    </div>
-  </nav>
   <!-- horoscope choosing body // sign buttons -->
   <section class="hero is-fullheight-with-navbar">
     <div class="hero-body">
       <div class="container">
+        <div class="center-align">
+          <img id="nav-img" src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
+          <br>
+          <span class="nav-title">Yoda-Me-Astrology</span>
+        </div>
         <p class="title">
           Choose Your Horoscope Sign:
         </p>
@@ -59,6 +55,8 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
               <h2>Aquarius</h2>
               <h4></h4>
             </div>
@@ -76,6 +74,8 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
               <h2>Pisces</h2>
               <h4></h4>
             </div>
@@ -93,6 +93,8 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
               <h2>Aries </h2>
               <h4></h4>
             </div>
@@ -110,6 +112,8 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
               <h2>Taurus</h2>
               <h4></h4>
             </div>
@@ -127,6 +131,8 @@
             <span class="helper"></span>
             <div>
               <div class="popupCloseButton">&times;</div>
+              <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
               <h2>Gemini</h2>
               <h4></h4>
             </div>
@@ -145,6 +151,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Cancer</h2>
             <h4></h4>
           </div>
@@ -164,6 +172,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Leo</h2>
             <h4></h4>
           </div>
@@ -182,6 +192,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Virgo</h2>
             <h4></h4>
           </div>
@@ -200,6 +212,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Libra</h2>
             <h4></h4>
           </div>
@@ -218,6 +232,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Scorpio</h2>
             <h4></h4>
           </div>
@@ -237,6 +253,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Sagittarius</h2>
             <h4></h4>
           </div>
@@ -255,6 +273,8 @@
           <span class="helper"></span>
           <div>
             <div class="popupCloseButton">&times;</div>
+            <img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
+          width="200px" height="200px">
             <h2>Capricorn</h2>
             <h4></h4>
           </div>
