Fixed misspelling and spacing

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
 
 <body>
   <!-- heading area -->
-
-=======
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo center"><img src="./icons/YodaDigitalCutFile/Yoda Digital Cut File.png" alt="icons"
@@ -168,7 +166,6 @@
           width="200px" height="200px">
             <h2>Cancer</h2>
             <h4></h4>
-=======
           <div class="hover_bkgr_fricc cancerHover">
             <span class="helper"></span>
             <div>
@@ -189,6 +186,7 @@
               <a class="trigger_popup_fricc leoTrig" id="leo">Leo</a>
             </div>
           </div>
+
         <div class="hover_bkgr_fricc leoHover">
           <span class="helper"></span>
           <div>
@@ -197,7 +195,7 @@
           width="200px" height="200px">
             <h2>Leo</h2>
             <h4></h4>
-=======
+
           <div class="hover_bkgr_fricc leoHover">
             <span class="helper"></span>
             <div>
@@ -223,7 +221,7 @@
           width="200px" height="200px">
             <h2>Virgo</h2>
             <h4></h4>
-=======
+
           <div class="hover_bkgr_fricc virgoHover">
             <span class="helper"></span>
             <div>
@@ -249,7 +247,7 @@
           width="200px" height="200px">
             <h2>Libra</h2>
             <h4></h4>
-=======
+
           <div class="hover_bkgr_fricc libraHover">
             <span class="helper"></span>
             <div>
@@ -275,7 +273,7 @@
           width="200px" height="200px">
             <h2>Scorpio</h2>
             <h4></h4>
-=======
+
           <div class="hover_bkgr_fricc scorpioHover">
             <span class="helper"></span>
             <div>
@@ -301,7 +299,7 @@
           width="200px" height="200px">
             <h2>Sagittarius</h2>
             <h4></h4>
-=======
+
           <div class="hover_bkgr_fricc sagittariusHover">
             <span class="helper"></span>
             <div>
@@ -327,7 +325,6 @@
           width="200px" height="200px">
             <h2>Capricorn</h2>
             <h4></h4>
-=======
           <div class="hover_bkgr_fricc capricornHover">
             <span class="helper"></span>
             <div>
@@ -342,11 +339,10 @@
   </section>
 
   <!-- axios script link -->
-=======
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Yoda Me Astrology</strong> by: Excepetional Handlers
+        <strong>Yoda Me Astrology</strong> by: Exceptional Handlers
         <p>
             <a href="SM">Stephanie McCandless</a>
         </p>
