--- a/index.html
+++ b/index.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <!--Bulma CSS link-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-
   <!--Materialize CSS link-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
   <!--Google font-->
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
-
   <!--jquery script link-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
   <!--Personal CSS link-->
   <link rel="stylesheet" href="./assets/style.css">
-
-
   <title>Yoda Me Astrology</title>
   <!--favicon-->
   <link rel="shortcut icon" href="https://img.icons8.com/flat_round/64/000000/warranty-card.png" />
 </head>
+<body>  
   <!-- horoscope choosing body // sign buttons -->
   <section class="hero is-fullheight-with-navbar">
     <div class="hero-body">
@@ -38,7 +31,6 @@
         <p class="title">
           Choose Your Horoscope Sign:
         </p>
-
         <!-- first 6 Horoscope signs: the button and the popups -->
         <div class="columns">
           <div class="column">
@@ -48,7 +40,6 @@
               <a class="trigger_popup_fricc aquaTrig" id="aquarius">Aquarius</a>
             </div>
           </div>
-
           <div class="hover_bkgr_fricc aquaHover">
             <span class="helper"></span>
             <div>
@@ -59,7 +50,6 @@
               <h4></h4>
             </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/pisces 2.png" alt="icons">
@@ -67,7 +57,6 @@
               <a class="trigger_popup_fricc piscesTrig" id="pisces">Pisces</a>
             </div>
           </div>
-
           <div class="hover_bkgr_fricc piscesHover">
             <span class="helper"></span>
             <div>
@@ -78,7 +67,6 @@
               <h4></h4>
             </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/aries 2.png" alt="icons">
@@ -86,7 +74,6 @@
               <a class="trigger_popup_fricc ariesTrig" id="aries">Aries </a>
             </div>
           </div>
-
           <div class="hover_bkgr_fricc ariesHover">
             <span class="helper"></span>
             <div>
@@ -97,7 +84,6 @@
               <h4></h4>
             </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/taurus 2.png" alt="icons">
@@ -105,7 +91,6 @@
               <a class="trigger_popup_fricc taurusTrig" id="taurus">Taurus </a>
             </div>
           </div>
-
           <div class="hover_bkgr_fricc taurusHover">
             <span class="helper"></span>
             <div>
@@ -116,7 +101,6 @@
               <h4></h4>
             </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/gemini 2.png" alt="icons">
@@ -124,7 +108,6 @@
               <a class="trigger_popup_fricc geminiTrig" id="gemini">Gemini</a>
             </div>
           </div>
-
           <div class="hover_bkgr_fricc geminiHover">
             <span class="helper"></span>
             <div>
@@ -135,7 +118,6 @@
               <h4></h4>
             </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/cancer 2.png" alt="icons">
@@ -143,7 +125,6 @@
               <a class="trigger_popup_fricc cancerTrig" id="cancer">Cancer</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc cancerHover">
           <span class="helper"></span>
           <div>
@@ -152,17 +133,9 @@
           width="200px" height="200px">
             <h2>Cancer</h2>
             <h4></h4>
-          <div class="hover_bkgr_fricc cancerHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Cancer</h2>
-              <h4></h4>
-            </div>
           </div>
         </div>
         </div>
-
         <!-- second 6 Horoscope buttons on the landing page -->
         <div class="columns">
           <div class="column">
@@ -172,7 +145,6 @@
               <a class="trigger_popup_fricc leoTrig" id="leo">Leo</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc leoHover">
           <span class="helper"></span>
           <div>
@@ -181,14 +153,6 @@
           width="200px" height="200px">
             <h2>Leo</h2>
             <h4></h4>
-
-          <div class="hover_bkgr_fricc leoHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Leo</h2>
-              <h4></h4>
-            </div>
           </div>
           </div>
           <div class="column">
@@ -198,7 +162,6 @@
               <a class="trigger_popup_fricc virgoTrig" id="virgo">Virgo</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc virgoHover">
           <span class="helper"></span>
           <div>
@@ -207,17 +170,8 @@
           width="200px" height="200px">
             <h2>Virgo</h2>
             <h4></h4>
-
-          <div class="hover_bkgr_fricc virgoHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Virgo</h2>
-              <h4></h4>
-            </div>
           </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/libra 2.png" alt="icons">
@@ -225,7 +179,6 @@
               <a class="trigger_popup_fricc libraTrig" id="libra">Libra</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc libraHover">
           <span class="helper"></span>
           <div>
@@ -234,17 +187,8 @@
           width="200px" height="200px">
             <h2>Libra</h2>
             <h4></h4>
-
-          <div class="hover_bkgr_fricc libraHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Libra</h2>
-              <h4></h4>
-            </div>
           </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/scorpio 2.png" alt="icons">
@@ -252,7 +196,6 @@
               <a class="trigger_popup_fricc scorpioTrig" id="scorpio">Scorpio</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc scorpioHover">
           <span class="helper"></span>
           <div>
@@ -261,17 +204,8 @@
           width="200px" height="200px">
             <h2>Scorpio</h2>
             <h4></h4>
-
-          <div class="hover_bkgr_fricc scorpioHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Scorpio</h2>
-              <h4></h4>
-            </div>
           </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/sagittarius 2.png" alt="icons">
@@ -279,7 +213,6 @@
               <a class="trigger_popup_fricc sagittariusTrig" id="sagittarius">Sagittarius</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc sagittariusHover">
           <span class="helper"></span>
           <div>
@@ -288,17 +221,8 @@
           width="200px" height="200px">
             <h2>Sagittarius</h2>
             <h4></h4>
-
-          <div class="hover_bkgr_fricc sagittariusHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Sagittarius</h2>
-              <h4></h4>
-            </div>
           </div>
           </div>
-
           <div class="column">
             <div class="border">
               <img src="./icons/capricorn 2.png" alt="icons">
@@ -306,7 +230,6 @@
               <a class="trigger_popup_fricc capricornTrig" id="capricorn">Capricorn</a>
             </div>
           </div>
-
         <div class="hover_bkgr_fricc capricornHover">
           <span class="helper"></span>
           <div>
@@ -315,22 +238,13 @@
           width="200px" height="200px">
             <h2>Capricorn</h2>
             <h4></h4>
-          <div class="hover_bkgr_fricc capricornHover">
-            <span class="helper"></span>
-            <div>
-              <div class="popupCloseButton">&times;</div>
-              <h2>Capricorn</h2>
-              <h4></h4>
-            </div>
           </div>
         </div>
         </div>
       </div>
     </div>
   </section>
-
   <!-- axios script link -->
-
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
@@ -347,13 +261,11 @@
         <p>
             <a href="MB">Michael Burkett</a>
         </p>
-        
     </div>
   </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!--personal javascript link-->
   <script src="./assets/app.js"></script>
 </body>
-
 </html>
+8:40
